@@ -10,6 +10,7 @@ PostGIS 2.4.4dev
   - #3942, geojson: Do not include private header for json-c >= 0.13
            (Björn Esser)
   - #4025, Incorrect answers for temporally "amost overlapping" ranges
+  - #4017, lwgeom lexer memory corruption (Peter E)
 
  * Enhancements *
     - #3992, Use PKG_PROG_PKG_CONFIG macro from pkg.m4 to detect pkg-config
